# cmake-conan-template

./: .clang-format  .gitattributes  CMakeLists.txt  DemoExecutable_2assets_2README_8md.html  LICENSE  README.md  README_8md.html  a_8cpp.html  a_8cpp_source.html  a_8hpp.html  a_8hpp_source.html  b_8hpp.html  b_8hpp_source.html  check__for__cat_8cpp.html  check__for__cat_8cpp_source.html  check__the__number_8cpp.html  check__the__number_8cpp_source.html  dir_1e44d8f7d11b54fd760a3586e16061ee.html  dir_ae1f9fc8e6a385587a823345fc78ad3b.html  dir_c0b507112b7dfa6f81c7b67d17167564.html  dir_c400a79943d8deea0e48514f438e9b02.html  dir_dec6f6c89c7e79e23ab86dea6f1a8ef8.html  doxyfile  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp_source.html  namespacedemolib.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  package_8hpp.html  package_8hpp_source.html
.github/workflows/: cmake-multi-platform.yml  doxygen.yml  unit_tests.yml
DemoExecutable/: CMakeLists.txt  main.cpp
DemoExecutable/assets/: README.md
DemoExecutable/tests/: check_for_cat.cpp  check_the_number.cpp
DemoLib/: CMakeLists.txt
DemoLib/some_package/: a.cpp  a.hpp  b.hpp  package.hpp
cmake/: compiler_config.cmake  create_target.cmake  run_conan.cmake
cmake/profiles/: clang.cmake  gcclike_common.cmake  msvc.cmake  warnings_clang.cmake  warnings_gcc.cmake  warnings_msvc.cmake
dependencies/: conanfile.txt
out_dirs/: README.txt
search/: all_2.js  all_4.js  files_0.js  files_2.js  files_4.js  files_5.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
